docs: Add Family Controls (Screen Time) API usage details to privacy policy.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,25 @@
             certain personally identifiable information. The information that the Service Provider request will be
             retained by them and used as described in this privacy policy.</p>
 
+        <h2>Family Controls Usage</h2>
+
+        <p>The Application utilizes the Family Controls (Screen Time) API provided by Apple to enable app blocking
+            features. This functionality is core to the "Deep Detox" experience, allowing you to restrict access to
+            specific applications or categories during your detox sessions.</p>
+
+        <p>Please note the following regarding Family Controls usage:</p>
+
+        <ul>
+            <li><strong>Local Processing:</strong> All data related to your Screen Time usage, blocked apps, and
+                restrictions is processed locally on your device. The Application does not transmit this sensitive data
+                to external servers.</li>
+            <li><strong>Privacy Preservation:</strong> The Service Provider respects your privacy and does not access,
+                view, or store your app usage statistics or the specific apps you have installed.</li>
+            <li><strong>Revocation:</strong> You can revoke the Application's access to Family Controls at any time
+                through your device's Settings. However, doing so may limit the core functionality of the Application.
+            </li>
+        </ul>
+
         <h2>Third Party Access</h2>
 
         <p>Only aggregated, anonymized data is periodically transmitted to external services to aid the Service Provider
